# domi

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/materials/: cloud0.tex  cloud1.tex  cloud2.tex  cloud3.tex  cloud4.tex  cloud5.tex  horizon.tex  house_2.tex  rock0.tex  rock1.tex  rock2.tex  rock3.tex  tree0.tex  tree1.tex  tree2.tex  tree3.tex  tree4.tex  tree5.tex  tree6.tex  tree7.tex  tree8.tex  tree9.tex
assets/scenes/: game2d.json
demo/: game2d_scene.cpp  game2d_scene.h  game3d_scene.cpp  game3d_scene.h  menu_scene.cpp  menu_scene.h  second_scene.cpp  second_scene.h  tree_node.h
editor/: editor_main.cpp  editor_scene.cpp  editor_scene.h
engine/include/domi/: app.h  audio.h  camera2d.h  canvas2d.h  component.h  draw_batch.h  draw_command.h  ecs.h  input.h  material.h  material_io.h  math.h  physics.h  render.h  render_command.h  render_command_buffer.h  render_context.h  render_layer.h  render_list.h  render_node.h  render_pass.h  render_queue.h  render_texture.h  renderer.h  scene.h  scene_function.h  scene_loader.h  scene_manager.h  script.h  thread_pool.h  types.h  window.h
engine/include/domi/backend/: audio_backend.h  input_backend.h  render_backend.h  sdl_backend.h  window_backend.h
engine/include/domi/pass/: composite_pass.h  geometry_pass.h  lighting_pass.h  shadow_pass.h  ui_pass.h
engine/include/domi/ui/: clay_ui.h  font.h  ui.h
engine/src/audio/: audio.cpp
engine/src/backend/: sdl_backend.cpp
engine/src/core/: app.cpp  thread_pool.cpp  window.cpp
engine/src/ecs/: ecs.cpp
engine/src/input/: input.cpp
engine/src/math/: math.cpp
engine/src/physics/: physics.cpp
engine/src/render/: canvas2d.cpp  draw_batch.cpp  draw_command.cpp  material_io.cpp  render_command_buffer.cpp  render_list.cpp  render_node.cpp  render_queue.cpp  render_texture.cpp  renderer.cpp
engine/src/render/2d/: render2d.cpp
engine/src/render/pass/: composite_pass.cpp  geometry_pass.cpp  lighting_pass.cpp  shadow_pass.cpp  ui_pass.cpp
engine/src/scene/: scene.cpp  scene_function.cpp  scene_loader.cpp  scene_manager.cpp
engine/src/script/: script.cpp
engine/src/ui/: clay_layout.c  clay_layout.h  clay_ui.cpp  font.cpp  ui.cpp
script_api/: domi_api.h
scripts/src/: player_2d.cpp
tools/: setup-deps.sh
tools/generators/: cloud_generator.cpp  cloud_generator.h  horizon_generator.cpp  horizon_generator.h  house_generator.cpp  house_generator.h  material_generator.cpp  material_generator.h  rock_generator.cpp  rock_generator.h  tree_generator.cpp  tree_generator.h
tools/generators/3d/: car3d_generator.cpp  car3d_generator.h  cube3d_generator.cpp  cube3d_generator.h  mesh3d.h  tree3d_generator.cpp  tree3d_generator.h
